# py2many

./: .editorconfig  .flake8  .gitignore  .gitmodules  .mise.toml  .miserc.toml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LANGUAGES.md  LICENSE  MANIFEST.in  Makefile  README.md  binary_trees.txt  clike.py  compiler.py  context.py  cppython.py  fib.py  ola.txt  poorjit.py  py14.py  py2many.py  pyproject.toml  pyrs.py  pytest.ini  requirements.txt  revive.toml  run_regtests.py  run_tests.sh  server.py  setup.cfg  setup.py  test_context.py  test_tracer.py  (+6 more)
.github/: dependabot.yml
.github/workflows/: auto-cancellation.yml  clippy.yml  fast.yaml  main-hosted.yml  main.yml
.mise/: config.cpp.toml  config.dart.toml  config.dlang.toml  config.go.toml  config.julia.toml  config.kotlin.toml  config.lean.toml  config.linux.toml  config.macos.toml  config.mojo.toml  config.nim.toml  config.rust.toml  config.smt.toml  config.toml  config.vlang.toml  config.windows.toml  config.zig.toml
addons/PyEnum/: Enum.jl  PyEnum.jl  operators.jl
boost_examples/: .extern_functions.cpp.swp  Makefile  extern_functions.cpp  extern_functions.py
common/: analysis.py  annotation_transformer.py  clike.py  context.py  declaration_extractor.py  inference.py  mutability_transformer.py  nesting_transformer.py  scope.py  tracer.py
doc/: langspec.md
doc/agent/: development.md  testing.md  transpilers.md
docker/: Dockerfile  Dockerfile.julia  Dockerfile.omni  entrypoint.sh
docker/mojo/: pixi.toml
docker/mojo-alpine/: pixi.toml
examples/: binary_search.cpp  binary_search.py  bubble_sort.cpp  bubble_sort.py  comb_sort.cpp  comb_sort.py  dictionary.py  fib.cpp  fib.py  list_comprehension.py  map.cpp  map.py  std_normal_pdf.cpp  std_normal_pdf.py
examples/monkeytype/: __init__.py  main.py
py14/: analysis.py  clike.py  context.py  py14.py  scope.py  test_analysis.py  test_context.py  test_scope.py  test_tracer.py  test_transpiler.py  tracer.py  transpiler.py
py14/runtime/: builtins.h  range.hpp
py14/tests/: test_analysis.py  test_clike.py  test_context.py  test_scope.py  test_tracer.py  test_transpiler.py
py2many/: __init__.py  __main__.py  analysis.py  annotation_transformer.py  ast_helpers.py  astx.py  cli.py  clike.py  context.py  declaration_extractor.py  exceptions.py  external_modules.py  helpers.py  inference.py  input_configuration.py  input_configurations.py  json_parser.py  language.py  llm.py  macosx_llm.py  module_dependencies.py  mutability_transformer.py  nesting_transformer.py  process_helpers.py  python_transformer.py  pytype_inference.py  raises_transformer.py  registry.py  result.py  rewriters.py  scope.py  smt.py  stubs.py  toposort_modules.py  tracer.py  transformers.py  vformat.py
py2py/: transpiler.py
pycpp/: __init__.py  clike.py  cpp_ast.py  plugins.py  tracer.py  transpiler.py
pycpp/runtime/: builtins.h  sys.h
pycpp/tests/: test_analysis.py  test_context.py  test_tracer.py  test_transpiler.py
pyd/: README.md  __init__.py  clike.py  plugins.py  transpiler.py
pydart/: clike.py  declaration_extractor.py  plugins.py  transpiler.py
pygo/: __init__.py  clike.py  declaration_extractor.py  inference.py  plugins.py  stubs.py  transpiler.py
pygo/runtime/: go.mod  pygo.go
pyjl/: README.md  __init__.py  analysis.py  clike.py  config_parser.py  declaration_extractor.py  global_vars.py  helpers.py  inference.py  juliaAst.py  julia_ast.py  optimizations.py  plugins.py  pyjl_vars.py  rewriter_plugins.py  rewriters.py  run_tests.bat  run_tests.sh  tracer.py  transformers.py  transpiler.py
pyjl/cases/: asyncio_test.jl  binit.py  bubble_sort.py  byte_literals.py  complex.py  coverage.py  demorgan.py  equations.py  exceptions.py  int_enum.py  lambda.py  langcomp_bench.py  print.py  rect.py  sealed.py  smt_types.py  str_enum.py  sys_argv.py
pyjl/formatter/: .JuliaFormatter.toml  Format.jl  cformat.jl  fmt.jl  fmtcore.jl  fmtspec.jl  format_files.jl  formatexpr.jl  printf.jl
pyjl/json-files/: json_test.json  json_test.yaml
pyjl/julia_tests/: channel_test.jl  dataclass_test.jl
pyjl/python_tests/: ast_walk.py
pyjl/setup_files/: setup.ini
pyjl/tests/: access_class_value.jl  ast_walk.jl  ast_walk.py  bin_op_test.jl  bin_op_test.py  calendar.jl  cls_copy.jl  dataclass_test.jl  dataclass_test.py  for_test.jl  for_test.py  generator_expressions.jl  generator_expressions.py  global2_copy.jl  (+16 more)
pyjl/tests-py2many/: json_test.jl  json_test_without_types.jl  str_enum_copy.jl  unary_op.jl
pykt/: __init__.py  clike.py  declaration_extractor.py  inference.py  plugins.py  transpiler.py
pylean/: __init__.py  clike.py  fmt.lean  inference.py  plugins.py  rewriters.py  transpiler.py
pymojo/: __init__.py  clike.py  inference.py  plugins.py  rewriters.py  transpiler.py
pynim/: __init__.py  clike.py  inference.py  plugins.py  rewriters.py  transpiler.py
pyrs/: __init__.py  analysis.py  annotation_transformer.py  clike.py  context.py  declaration_extractor.py  inference.py  minimal.py  mutability_transformer.py  plugins.py  rust_ast.py  scope.py  tracer.py  transpiler.py
pysmt/: __init__.py  clike.py  inference.py  plugins.py  rewriters.py  transpiler.py
pyv/: __init__.py  clike.py  inference.py  plugins.py  self_transpile.py  stubs.py  transpiler.py
pyzig/: __init__.py  clike.py  inference.py  plugins.py  rewriters.py  transpiler.py
regtests/: Makefile  test_factorial.py  test_range.py
runtime/: builtins.h  cpp-setup.sh  sys.h
scripts/: cljstyle  cpp-setup.sh  dart-setup.sh  dlang-setup.sh  go-setup.sh  julia-setup.sh  lang_table.py  lean-runner.sh  rust-runner.sh  vlang-setup.sh  zig-runner.sh  zig-setup.sh
static/: index.html
tests/: .JuliaFormatter.toml  .cljstyle  pytest.ini  test_analysis.py  test_cases.py  test_cli.py  test_clike.py  test_context.py  test_cpp_ast.py  test_fib.py  test_inference.py  test_pytype.py  test_rust_ast.py  test_scope.py  test_settings.py  test_toposort.py  test_tracer.py  test_tracer_cpp.py  test_transpile_self.py  test_transpiler_cpp.py  test_unsupported.py
(+1721 files in other folders)
