[package]
name = "py2many-tests"
version = "0.1.0"
description = "A package for py2many tests"
edition = "2018"
include = ["tests/ext_expected/*.rs"]

[dependencies]
anyhow = "*"
flagset = "*"
futures = "*"
pyo3 = "*"
structopt = "*"
strum = "*"
strum_macros = "*"
lazy_static = "*"
pylib = "*"
tempfile = "*"


[lib]
crate-type = ["cdylib"]
path = "tests/ext_expected/lib.rs"
bench = false

[[bin]]
name = "assert"
test = true
path = "tests/expected/assert.rs"

[[bin]]
name = "asyncio_test"
test = true
path = "tests/expected/asyncio_test.rs"

[[bin]]
name = "binit"
test = true
path = "tests/expected/binit.rs"

[[bin]]
name = "bitops"
test = true
path = "tests/expected/bitops.rs"

[[bin]]
name = "bubble_sort"
test = true
path = "tests/expected/bubble_sort.rs"

[[bin]]
name = "built_ins"
test = true
path = "tests/expected/built_ins.rs"

[[bin]]
name = "cls"
test = true
path = "tests/expected/cls.rs"

[[bin]]
name = "comb_sort"
test = true
path = "tests/expected/comb_sort.rs"

[[bin]]
name = "comment_unsupported"
test = true
path = "tests/expected/comment_unsupported.rs"

[[bin]]
name = "coverage"
test = true
path = "tests/expected/coverage.rs"

[[bin]]
name = "dict"
test = true
path = "tests/expected/dict.rs"

[[bin]]
name = "fib"
test = true
path = "tests/expected/fib.rs"

[[bin]]
name = "fstring"
test = true
path = "tests/expected/fstring.rs"

[[bin]]
name = "global"
test = true
path = "tests/expected/global.rs"

[[bin]]
name = "global2"
test = true
path = "tests/expected/global2.rs"

[[bin]]
name = "hello_world"
test = true
path = "tests/expected/hello_world.rs"

[[bin]]
name = "infer"
test = true
path = "tests/expected/infer.rs"

[[bin]]
name = "infer_ops"
test = true
path = "tests/expected/infer_ops.rs"

[[bin]]
name = "int_enum"
test = true
path = "tests/expected/int_enum.rs"

[[bin]]
name = "lambda"
test = true
path = "tests/expected/lambda.rs"

[[bin]]
name = "langcomp_bench"
test = true
path = "tests/expected/langcomp_bench.rs"

[[bin]]
name = "loop"
test = true
path = "tests/expected/loop.rs"

[[bin]]
name = "nested_dict"
test = true
path = "tests/expected/nested_dict.rs"

[[bin]]
name = "print"
test = true
path = "tests/expected/print.rs"

[[bin]]
name = "rect"
test = true
path = "tests/expected/rect.rs"

[[bin]]
name = "str_enum"
test = true
path = "tests/expected/str_enum.rs"

[[bin]]
name = "sys_argv"
test = true
path = "tests/expected/sys_argv.rs"

[[bin]]
name = "sys_exit"
test = true
path = "tests/expected/sys_exit.rs"

[[bin]]
name = "fib_with_argparse"
test = true
path = "tests/expected/fib_with_argparse.rs"

[[bin]]
name = "byte_literals"
test = true
path = "tests/expected/byte_literals.rs"

[[bin]]
name = "with_open"
test = true
path = "tests/expected/with_open.rs"

[[bin]]
name = "sealed"
test = true
path = "tests/expected/sealed.rs"

[[bin]]
name = "import_tests"
test = true
path = "tests/expected/import_tests.rs"
