[project]
name = "py2many"
description = "Python to Rust, C++, Go, Zig, Mojo & More - Universal Python Transpiler"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arun Sharma"}
]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: C++",
    "Programming Language :: Go",
    "Programming Language :: Kotlin",
    "Topic :: Software Development :: Compilers",
    "Topic :: Utilities",
]
dependencies = [
    "argparse_dataclass",
]
dynamic = ["version"]

[project.optional-dependencies]
# pypi doesn't allow direct dependencies
# dev = [
#   "typpete @ git+https://github.com/adsharma/Typpete/",
#   "algebraic-data-types @ git+https://github.com/adsharma/adt/",
# ]
test = [
    "importlib-resources; python_version < '3.9'",
    "pytest",
    "pytest-cov",
    "black",
    "astpretty",
    "jgo",
]
llm = [
    "mlx_llm; sys_platform == 'darwin'",
    "llm; sys_platform != 'darwin'",
    "llm-ollama; sys_platform != 'darwin'",
]

[project.scripts]
py2many = "py2many.cli:main"

[project.urls]
Homepage = "https://github.com/adsharma/py2many"

[tool.setuptools]
packages = [
    "py2many",
    "py2many.pycpp",
    "py2many.pyd",
    "py2many.pydart",
    "py2many.pygo",
    "py2many.pyjl",
    "py2many.pykt",
    "py2many.pymojo",
    "py2many.pynim",
    "py2many.pyrs",
    "py2many.pysmt",
    "py2many.pyv",
    "py2many.pyzig",
]

[tool.setuptools.package-dir]
"py2many" = "py2many"
"py2many.pycpp" = "pycpp"
"py2many.pyd" = "pyd"
"py2many.pydart" = "pydart"
"py2many.pygo" = "pygo"
"py2many.pyjl" = "pyjl"
"py2many.pykt" = "pykt"
"py2many.pymojo" = "pymojo"
"py2many.pynim" = "pynim"
"py2many.pyrs" = "pyrs"
"py2many.pysmt" = "pysmt"
"py2many.pyv" = "pyv"
"py2many.pyzig" = "pyzig"

[tool.setuptools.dynamic]
version = {attr = "py2many.version.__version__"}

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
